--- a/style.css
+++ b/style.css
@@ -39,28 +39,62 @@ main {
   padding: 1.5rem;
 }
 
+.hero-image {
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+.hero-image div::before {
+  /* overflow: hidden; */
+  visibility: hidden;
+  color: white;
+  /* z-index: -1; */
+}
+
+.hero-image div:hover::before {
+  /* z-index: 2; */
+  display: flex;
+  position: absolute;
+  content: url("./images/icon-view.svg");
+  top: 6.06rem;
+  left: 36.5rem;
+  width: 350px;
+  height: 349px;
+  border-radius: 0.5rem;
+  background: hsl(178, 100%, 50%, 50%);
+  justify-content: center;
+  align-items: center;
+  visibility: visible;
+  cursor: pointer;
+}
+
 .balance {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 20px;
 }
 
 .balance img {
-    /**This is to set smaller size for the logo*/
-    width: max-content;
+  /**This is to set smaller size for the logo*/
+  width: max-content;
 }
-
 
 h1 {
   /* padding: 10px; */
-  gap: 1rem;
   text-align: left;
   color: var(--White);
   font-size: 1rem;
   font-weight: 600;
 }
 
+h1:hover,
+.text-mute span:hover {
+  color: var(--Cyan);
+  cursor: pointer;
+}
+
 p {
-  padding: 15px;
+  /*padding: 15px;*/
   font-size: 1rem;
   font-weight: 300;
   text-align: left;
@@ -71,7 +105,7 @@ p {
   margin: 0 auto;
   background-color: var(--Soft-blue);
   height: 1px;
-  width: 90%;
+  width: 100%;
 }
 
 .eth {
@@ -82,21 +116,41 @@ p {
   gap: 0.5rem;
 }
 
-
 .days {
   display: flex;
   color: var(--Soft-blue);
+  font-weight: 300;
 }
 
-.hero-image .ether {
-  border-radius: 10px;
-  max-width: max-content;
-}
 .avatar {
   border: 2px solid var(--White);
-  max-width: 30px;
+  width: 30px;
   border-radius: 50%;
-  margin: 0 auto;
+  /* margin: 0 auto; */
+}
+
+.text-mute {
+  display: flex;
+  font-size: 0.9rem;
+  color: var(--Soft-blue);
+  font-weight: 300;
+  align-items: center;
+  gap: 2.5rem;
+  margin-top: 10px;
+}
+
+.text-mute span {
+  color: var(--White);
+}
+
+.eth span {
+  font-size: 0.8rem;
+  color: var(--Cyan);
+}
+
+.days span {
+  font-size: 0.8rem;
+  color: var(--Soft-blue);
 }
 
 /* Media Screen*/
